[package]
name = "smqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
# MQTT broker
rmqtt       = { path = "../rmqtt/rmqtt" }

# HTTP
axum        = { version = "0.7", features = ["macros"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["trace"] }

# Async runtime
tokio       = { version = "1", features = ["full"] }

# Database
sqlx        = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid"] }

# Crypto
ed25519-dalek   = { version = "2", features = ["rand_core"] }
x25519-dalek    = { version = "2", features = ["static_secrets"] }
hkdf            = "0.12"
hmac            = "0.12"
sha2            = "0.10"
rand            = "0.8"

# JWT
jsonwebtoken = "9"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Utilities
uuid        = { version = "1", features = ["v4", "serde"] }
base64      = "0.22"
bytes       = "1"
bytestring  = "1"
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config      = "0.14"
async-trait = "0.1"
reqwest     = { version = "0.12", features = ["json"] }
dashmap     = "5"
